--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  background: #eee;
+  font-weight: normal;
+  font-size: 16px;
+  font-family: 'Helvetica Neue', 'Helvetica', 'Microsoft YaHei', 'Arial', 'sans-serif';
+  -webkit-font-smoothing: antialiased;
+  color: #333;
+}
